--- a/app/mardownExamples/layout/07.md
+++ b/app/mardownExamples/layout/07.md
@@ -1,3 +1,56 @@
 ```javascript
+export function GridFunctionOne() {
+  const [columnCount, setColumnCount] = useState < number > 3;
+  const colorVariants = [
+    boxColors.one,
+    boxColors.two,
+    boxColors.three,
+    boxColors.four,
+    boxColors.five,
+    boxColors.six,
+  ];
 
+  const handleColumnCountChange = (event: ChangeEvent<HTMLSelectElement>) => {
+    setColumnCount(Number(event.target.value));
+  };
+
+  const generateGridItems = () => {
+    const items = [];
+    for (let i = 0; i < columnCount; i++) {
+      const colorVariant = `${colorVariants[i]}`;
+      items.push(
+        <GridItem key={i} {...gridBoxStyles} bg={colorVariant}>
+          <Text size="xs">Col {i + 1}</Text>
+        </GridItem>
+      );
+    }
+    return items;
+  };
+
+  return (
+    <VStack w="100%" spacing={5}>
+      <HStack w="100%" justify="space-evenly">
+        <Select
+          {...SelectStyles}
+          width="150px"
+          value={columnCount}
+          onChange={handleColumnCountChange}
+        >
+          <option value={1}>1 Column</option>
+          <option value={2}>2 Columns</option>
+          <option value={3}>3 Columns</option>
+          <option value={4}>4 Columns</option>
+          <option value={5}>5 Columns</option>
+          <option value={6}>6 Columns</option>
+        </Select>
+      </HStack>
+
+      <Container w="100%" bg="mainText" p={4}>
+        <Grid w="100%" templateColumns={`repeat(${columnCount}, 1fr)`} gap={4}>
+          {generateGridItems()}
+        </Grid>
+      </Container>
+    </VStack>
+  );
+}
 ```
