--- a/app/mardownExamples/layout/08.md
+++ b/app/mardownExamples/layout/08.md
@@ -1,3 +1,31 @@
 ```javascript
-
+export function GridFunctionTwo() {
+  return (
+    <Grid templateRows="repeat(2, 1fr)" templateColumns="repeat(5, 1fr)">
+      <GridItem rowSpan={2} colSpan={1}>
+        <Center w="100%" h="100%">
+          <VStack spacing={0}>
+            <Code fontSize="xs">{`rowSpan={2}`}</Code>
+            <Code fontSize="xs">{`colSpan={1}`}</Code>
+          </VStack>
+        </Center>
+      </GridItem>
+      <GridItem colSpan={4}>
+        <Center w="100%" h="100%">
+          <Code fontSize="xs">{`colSpan={4}`}</Code>
+        </Center>
+      </GridItem>
+      <GridItem colSpan={2}>
+        <Center w="100%" h="100%">
+          <Code fontSize="xs">{`colSpan={2}`}</Code>
+        </Center>
+      </GridItem>
+      <GridItem colSpan={2}>
+        <Center w="100%" h="100%">
+          <Code fontSize="xs">{`colSpan={2}`}</Code>
+        </Center>
+      </GridItem>
+    </Grid>
+  );
+}
 ```
