--- a/app/mardownExamples/layout/10.md
+++ b/app/mardownExamples/layout/10.md
@@ -1,3 +1,24 @@
 ```javascript
-
+export function GridFunctionFour() {
+  return (
+    <Grid
+      templateColumns="repeat(auto-fit, minmax(90px, 1fr))"
+      templateRows="repeat(2, 125px)"
+      gap={4}
+    >
+      <Box gridRow="1 / span 2" gridColumn="1 / span 1">
+        Element A
+      </Box>
+      <Box gridRow="1 / 2" gridColumn="2 / 4">
+        Element B
+      </Box>
+      <Box gridRow="2 / 3" gridColumn="2 / 3">
+        Element C
+      </Box>
+      <Box gridRow="2 / 3" gridColumn="3 / 4">
+        Element D
+      </Box>
+    </Grid>
+  );
+}
 ```
