--- a/app/mardownExamples/layout/11.md
+++ b/app/mardownExamples/layout/11.md
@@ -1,3 +1,18 @@
 ```javascript
-
+export function GridFunctionFive() {
+  return (
+    <Grid
+      templateAreas="
+  'header header header'
+  'sidebar content content'
+  'footer footer footer'
+"
+    >
+      <Box gridArea="header">Header</Box>
+      <Box gridArea="sidebar">Sidebar</Box>
+      <Box gridArea="content">Content</Box>
+      <Box gridArea="footer">Footer</Box>
+    </Grid>
+  );
+}
 ```
