--- a/app/mardownExamples/layout/h13.md
+++ b/app/mardownExamples/layout/h13.md
@@ -1,3 +1,71 @@
 ```javascript
+export function GridFunctionSix() {
+  const avatars = [
+    {
+      name: "Jasper Jenkins",
+      image: "https://i.pravatar.cc/150?u=a042581f4e29026704e",
+    },
+    {
+      name: "Sheila Norris",
+      image: "https://i.pravatar.cc/150?u=a042581f4e29026704f",
+    },
+    {
+      name: "Manny Parker",
+      image: "https://i.pravatar.cc/150?u=a042581f4e29026704g",
+    },
+    {
+      name: "Joseph Duncan",
+      image: "https://i.pravatar.cc/150?u=a042581f4e29026704h",
+    },
+    {
+      name: "Lori Perez",
+      image: "https://i.pravatar.cc/150?u=a042581f4e29026704i",
+    },
+    {
+      name: "Felix Miles",
+      image: "https://i.pravatar.cc/150?u=a042581f4e29026704j",
+    },
+  ];
 
+  const [avatarsWithSize, setAvatarsWithSize] = useState(
+    avatars.map((avatar, index) => ({
+      ...avatar,
+      scale: index % 2 === 0 ? 1.1 : 1,
+    }))
+  );
+
+  useEffect(() => {
+    const interval = setInterval(() => {
+      setAvatarsWithSize((prevAvatars) => {
+        let updatedAvatars = prevAvatars.map((avatar, index) => ({
+          ...avatar,
+          scale: avatar.scale === 1.1 ? 0.9 : 1.1,
+        }));
+        return updatedAvatars;
+      });
+    }, 5000);
+
+    return () => clearInterval(interval);
+  }, []);
+
+  return (
+    <div>
+      <Grid templateColumns="repeat(auto-fill, minmax(100px, 1fr))" gap={4}>
+        {avatarsWithSize.map((avatar, index) => (
+          <VStack key={index} w="100%" align="center">
+            <Box
+              textAlign="center"
+              gridColumnStart={index % 2 === 0 ? "span 2" : "auto"}
+              transition="transform 4s ease-in-out"
+              transform={`scale(${avatar.scale})`}
+            >
+              <Avatar size="lg" name={avatar.name} src={avatar.image} />
+            </Box>
+            <Text mt={2}>{avatar.name}</Text>
+          </VStack>
+        ))}
+      </Grid>
+    </div>
+  );
+}
 ```
