--- a/app/mardownExamples/layout/09.md
+++ b/app/mardownExamples/layout/09.md
@@ -1,3 +1,17 @@
 ```javascript
-
+export function GridFunctionThree() {
+  return (
+    <VStack w="100%" align="center" spacing={6}>
+      <Grid templateColumns="repeat(3, 1fr)" templateRows="repeat(3, 1fr)">
+        <Box gridRow="1 / 3" gridColumn="1 / 3">
+          Element A
+        </Box>
+        <Box gridRow="2 / 4" gridColumn="2 / 4">
+          Element B
+        </Box>
+        <Box>Element C</Box>
+      </Grid>
+    </VStack>
+  );
+}
 ```
