--- a/app/mardownExamples/layout/h15.md
+++ b/app/mardownExamples/layout/h15.md
@@ -1,3 +1,36 @@
 ```javascript
+export function GridFunctionEight() {
+  const items = ["Item 1", "Item 2", "Item 3", "Item 4", "Item 5", "Item 6"];
 
+  const colorKeys = Object.keys(boxColors);
+
+  return (
+    <SingleExample bg="background">
+      <Grid
+        templateColumns="repeat(auto-fit, minmax(60px, 1fr))"
+        {...GridStyles}
+        gap={4}
+      >
+        {items.map((item, index) => (
+          <Box
+            key={index}
+            {...gridBoxStyles}
+            h="120px"
+            bg={boxColors[colorKeys[index] as keyof typeof boxColors]}
+            display="flex"
+            justifyContent="center"
+            alignItems="center"
+            gridColumn={index % 2 === 0 ? "1 / 2" : "2 / 3"}
+          >
+            <Center w="100%">
+              <Text fontSize="lg" fontWeight="bold">
+                {item}
+              </Text>
+            </Center>
+          </Box>
+        ))}
+      </Grid>
+    </SingleExample>
+  );
+}
 ```
