finished simple grid

--- a/app/mardownExamples/layout/12.md
+++ b/app/mardownExamples/layout/12.md
@@ -1,3 +1,13 @@
 ```javascript
-
+export function SimpleGridFunctionOne() {
+  return (
+    <SimpleGrid columns={3} spacing={10}>
+      <Box height="80px">Container 1</Box>
+      <Box height="80px">Container 2</Box>
+      <Box height="80px">Container 3</Box>
+      <Box height="80px">Container 4</Box>
+      <Box height="80px">Container 5</Box>
+    </SimpleGrid>
+  );
+}
 ```
