--- a/app/mardownExamples/layout/14.md
+++ b/app/mardownExamples/layout/14.md
@@ -1,3 +1,13 @@
 ```javascript
-
+export function SimpleGridFunctionThree() {
+  return (
+    <SimpleGrid minChildWidth="120px" spacing="40px">
+      <Box height="80px">Container 1</Box>
+      <Box height="80px">Container 2</Box>
+      <Box height="80px">Container 3</Box>
+      <Box height="80px">Container 4</Box>
+      <Box height="80px">Container 5</Box>
+    </SimpleGrid>
+  );
+}
 ```
