--- a/app/mardownExamples/layout/15.md
+++ b/app/mardownExamples/layout/15.md
@@ -1,3 +1,13 @@
 ```javascript
-
+export function SimpleGridFunctionFour() {
+  return (
+    <SimpleGrid columns={2} spacingX="40px" spacingY="20px">
+      <Box height="80px">Container 1</Box>
+      <Box height="80px">Container 2</Box>
+      <Box height="80px">Container 3</Box>
+      <Box height="80px">Container 4</Box>
+      <Box height="80px">Container 5</Box>
+    </SimpleGrid>
+  );
+}
 ```
