--- a/app/mardownExamples/layout/h16.md
+++ b/app/mardownExamples/layout/h16.md
@@ -1,3 +1,17 @@
 ```javascript
-
+export function SimpleGridFunctionFive() {
+  return (
+    <SimpleGrid columns={[1, null, 3, 1]} spacing="20px">
+      <Box>
+        <Image src="https://placebear.com/300/300" alt="Image 1" />
+      </Box>
+      <Box>
+        <Image src="http://placekitten.com/300/300" alt="Image 2" />
+      </Box>
+      <Box>
+        <Image src="https://place-puppy.com/300x300" alt="Image 3" />
+      </Box>
+    </SimpleGrid>
+  );
+}
 ```
