--- a/app/mardownExamples/layout/h17.md
+++ b/app/mardownExamples/layout/h17.md
@@ -1,3 +1,85 @@
 ```javascript
-
+export function SimpleGridFunctionSix() {
+  return (
+    <SingleExample bg="background" padding={0}>
+      <SimpleGrid columns={[1, null, 3, 1]} spacing="40px">
+        <Box>
+          <Heading as="h3">Basic</Heading>
+          <Text>$9.99/mo</Text>
+          <VStack>
+            <HStack>
+              <ArrowForwardIcon />
+              <span>Feature 1</span>
+            </HStack>
+            <HStack>
+              <ArrowForwardIcon />
+              <span>Feature 2</span>
+            </HStack>
+            <HStack>
+              <ArrowForwardIcon />
+              <span>Feature 3</span>
+            </HStack>
+          </VStack>
+          <Center>
+            <Button>Select Plan</Button>
+          </Center>
+        </Box>
+        <Box>
+          <Heading as="h3">Pro</Heading>
+          <Text>$19.99/mo</Text>
+          <VStack>
+            <HStack>
+              <ArrowForwardIcon />
+              <span>Feature 1</span>
+            </HStack>
+            <HStack>
+              <ArrowForwardIcon />
+              <span>Feature 2</span>
+            </HStack>
+            <HStack>
+              <ArrowForwardIcon />
+              <span>Feature 3</span>
+            </HStack>
+            <HStack>
+              <ArrowForwardIcon />
+              <span>Feature 4</span>
+            </HStack>
+          </VStack>
+          <Center>
+            <Button>Select Plan</Button>
+          </Center>
+        </Box>
+        <Box>
+          <Heading as="h3">Premium</Heading>
+          <Text>$29.99/mo</Text>
+          <VStack>
+            <HStack>
+              <ArrowForwardIcon />
+              <span>Feature 1</span>
+            </HStack>
+            <HStack>
+              <ArrowForwardIcon />
+              <span>Feature 2</span>
+            </HStack>
+            <HStack>
+              <ArrowForwardIcon />
+              <span>Feature 3</span>
+            </HStack>
+            <HStack>
+              <ArrowForwardIcon />
+              <span>Feature 4</span>
+            </HStack>
+            <HStack>
+              <ArrowForwardIcon />
+              <span>Feature 5</span>
+            </HStack>
+          </VStack>
+          <Center>
+            <Button>Select Plan</Button>
+          </Center>
+        </Box>
+      </SimpleGrid>
+    </SingleExample>
+  );
+}
 ```
