--- a/app/mardownExamples/layout/h18.md
+++ b/app/mardownExamples/layout/h18.md
@@ -1,3 +1,34 @@
 ```javascript
+interface DataCardProps {
+  title: string;
+  value: string;
+}
 
+export function SimpleGridFunctionSeven() {
+  const DataCard = ({ title, value }: DataCardProps) => (
+    <Box {...gridBoxStyles} p={boxPadding} bg={boxColors.four}>
+      <Text fontWeight="bold" mb={2}>
+        {title}
+      </Text>
+      <Text fontWeight="semibold">{value}</Text>
+      <Button mt={2}>See Data</Button>
+    </Box>
+  );
+  return (
+    <SimpleGrid columns={[1, 2, 4, 1]} spacing="20px">
+      <Box>
+        <DataCard title="Users" value="1,500" />
+      </Box>
+      <Box>
+        <DataCard title="Revenue" value="$50,000" />
+      </Box>
+      <Box>
+        <DataCard title="Sales" value="500" />
+      </Box>
+      <Box>
+        <DataCard title="Rate" value="25%" />
+      </Box>
+    </SimpleGrid>
+  );
+}
 ```
