--- a/app/mardownExamples/layout/20.md
+++ b/app/mardownExamples/layout/20.md
@@ -1,3 +1,15 @@
 ```javascript
-
+export function StackFunctionFive() {
+  return (
+    <VStack
+      divider={<StackDivider borderColor="tipBackground" />}
+      spacing={4}
+      align="stretch"
+    >
+      <Box h="100px">1</Box>
+      <Box h="100px">2</Box>
+      <Box h="100px">3</Box>
+    </VStack>
+  );
+}
 ```
