--- a/app/mardownExamples/layout/16.md
+++ b/app/mardownExamples/layout/16.md
@@ -1,3 +1,11 @@
 ```javascript
-
+export function StackFunctionOne() {
+  return (
+    <Stack spacing="24px">
+      <Square size="100px">1</Square>
+      <Square size="100px">2</Square>
+      <Square size="100px">3</Square>
+    </Stack>
+  );
+}
 ```
