--- a/app/mardownExamples/layout/18.md
+++ b/app/mardownExamples/layout/18.md
@@ -1,3 +1,11 @@
 ```javascript
-
+export function StackFunctionThree() {
+  return (
+    <VStack spacing="24px">
+      <Square size="100px">1</Square>
+      <Square size="100px">2</Square>
+      <Square size="100px">3</Square>
+    </VStack>
+  );
+}
 ```
