--- a/app/mardownExamples/layout/19.md
+++ b/app/mardownExamples/layout/19.md
@@ -1,3 +1,11 @@
 ```javascript
-
+export function StackFunctionFour() {
+  return (
+    <Stack direction={["column", "row"]} spacing="24px">
+      <Square size="100px">1</Square>
+      <Square size="100px">2</Square>
+      <Square size="100px">3</Square>
+    </Stack>
+  );
+}
 ```
