finished wrap and therefor layout

--- a/app/mardownExamples/layout/24.md
+++ b/app/mardownExamples/layout/24.md
@@ -1,3 +1,46 @@
 ```javascript
+interface WrapBoxProps {
+  color?: string;
+  w?: string;
+  h?: string;
+  children?: React.ReactNode;
+}
 
+function WrapBox({
+  color = boxColors.one,
+  w = "150px",
+  h = "50px",
+  children,
+}: WrapBoxProps) {
+  return (
+    <WrapItem>
+      <Center bg={color} w={w} h={h}>
+        {children}
+      </Center>
+    </WrapItem>
+  );
+}
+
+export function WrapFunctionFour() {
+  return (
+      <Wrap spacing="30px" align='center'>
+        <WrapBox h="40px">Box 1</WrapBox>
+        <WrapBox h="60px">
+          Box 2
+        </WrapBox>
+        <WrapBox h="80px">
+          Box 3
+        </WrapBox>
+        <WrapBox h="50px">
+          Box 4
+        </WrapBox>
+        <WrapBox h="70px"}>
+          Box 5
+        </WrapBox>
+        <WrapBox h="90px">
+          Box 6
+        </WrapBox>
+      </Wrap>
+  );
+}
 ```
