--- a/app/mardownExamples/layout/h22.md
+++ b/app/mardownExamples/layout/h22.md
@@ -1,3 +1,30 @@
 ```javascript
+export function WrapFunctionFive() {
+  const tags = [
+    "Electronics",
+    "Fashion",
+    "Home & Kitchen",
+    "Sports",
+    "Books",
+    "Beauty",
+    "Toys",
+  ];
 
+  return (
+    <Wrap spacing="5px">
+      {tags.map((tag, index) => (
+        <WrapItem key={index} mb="2px">
+          <Tag
+            border="1px solid"
+            fontWeight="bold"
+            shadow="xl"
+            borderRadius="full"
+          >
+            {tag}
+          </Tag>
+        </WrapItem>
+      ))}
+    </Wrap>
+  );
+}
 ```
