--- a/app/mardownExamples/layout/h23.md
+++ b/app/mardownExamples/layout/h23.md
@@ -1,3 +1,33 @@
 ```javascript
+interface FilterOptionProps {
+  children: React.ReactNode;
+}
 
+function FilterOption({ children }: FilterOptionProps) {
+  return (
+    <Button size="sm" borderRadius="xl">
+      {children}
+    </Button>
+  );
+}
+
+export function WrapFunctionSix() {
+  const filterOptions = [
+    "New Arrivals",
+    "Price: Low to High",
+    "Price: High to Low",
+    "Brand",
+    "Rating",
+  ];
+
+  return (
+    <Wrap spacing="5px" align="center">
+      {filterOptions.map((option, index) => (
+        <WrapItem key={index} mb="2px">
+          <FilterOption>{option}</FilterOption>
+        </WrapItem>
+      ))}
+    </Wrap>
+  );
+}
 ```
