--- a/app/mardownExamples/layout/h24.md
+++ b/app/mardownExamples/layout/h24.md
@@ -1,3 +1,36 @@
 ```javascript
-
+export function WrapFunctionSeven() {
+  const images = [
+    "https://picsum.photos/300?random=23",
+    "https://picsum.photos/300?random=33",
+    "https://picsum.photos/300?random=53",
+    "https://picsum.photos/300?random=44",
+    "https://picsum.photos/300?random=16",
+    "https://picsum.photos/300?random=24",
+    "https://picsum.photos/300?random=123",
+    "https://picsum.photos/300?random=13",
+  ];
+  return (
+    <SingleExample bg="background">
+      <Wrap
+        spacing="20px"
+        {...GridStyles}
+        justify="center"
+        align="center"
+        bg="sectionColor"
+      >
+        {images.map((image, index) => (
+          <WrapItem key={index}>
+            <Image
+              src={image}
+              w={["100px", "125px", "100px", "75px"]}
+              alt={`Image ${index + 1}`}
+              borderRadius="lg"
+            />
+          </WrapItem>
+        ))}
+      </Wrap>
+    </SingleExample>
+  );
+}
 ```
