--- a/app/mardownExamples/layout/22.md
+++ b/app/mardownExamples/layout/22.md
@@ -1,3 +1,36 @@
 ```javascript
+interface WrapBoxProps {
+  color?: string;
+  w?: string;
+  h?: string;
+  children?: React.ReactNode;
+}
 
+function WrapBox({
+  color = boxColors.one,
+  w = "150px",
+  h = "50px",
+  children,
+}: WrapBoxProps) {
+  return (
+    <WrapItem>
+      <Center bg={color} {...gridBoxStyles} w={w} h={h}>
+        {children}
+      </Center>
+    </WrapItem>
+  );
+}
+
+export function WrapFunctionTwo() {
+  return (
+    <Wrap spacing="30px">
+      <WrapBox w="140px">Box 1</WrapBox>
+      <WrapBox w="100px">Box 2</WrapBox>
+      <WrapBox w="200px">Box 3</WrapBox>
+      <WrapBox w="70px">Box 4</WrapBox>
+      <WrapBox w="90px">Box 5</WrapBox>
+      <WrapBox w="240px">Box 6</WrapBox>
+    </Wrap>
+  );
+}
 ```
