--- a/app/mardownExamples/typography/03.md
+++ b/app/mardownExamples/typography/03.md
@@ -1,3 +1,28 @@
 ```javascript
-
+export function HighlightFunctionFive() {
+  const sections = useHighlight({
+    text: "The project requires collaboration and effective communication among team members.",
+    query: ["collaboration", "communication"],
+  });
+  return (
+    <Heading lineHeight="tall">
+      {sections.map(({ match, text }) => {
+        if (!match) return text;
+        return (
+          <Box
+            key="text"
+            as="span"
+            px="2"
+            py="1"
+            borderRadius="md"
+            bg={match ? "purple.200" : "transparent"}
+            fontWeight={match ? "bold" : "normal"}
+          >
+            {text}
+          </Box>
+        );
+      })}
+    </Heading>
+  );
+}
 ```
