--- a/app/mardownExamples/typography/h04.md
+++ b/app/mardownExamples/typography/h04.md
@@ -1,3 +1,52 @@
 ```javascript
+export function HighlightFunctionSix() {
+  const [inputValue, setInputValue] = useState("");
+  const [keyword, setKeyword] = useState("wonderful");
 
+  const handleInputChange = (e: ChangeEvent<HTMLTextAreaElement>) => {
+    const value = e.target.value;
+    if (value.length <= 80) {
+      setInputValue(value);
+    }
+  };
+
+  const characterCount = inputValue.length;
+  const remainingCharacters = 80 - characterCount;
+
+  return (
+    <SingleExample bg="background">
+      <Box minH="300px" pt={2}>
+        <VStack w="100%" spacing={3}>
+          <VStack w="100%" spacing={1}>
+            <Text mb="0">Word to highlight:</Text>
+            <Input
+              value={keyword}
+              onChange={(e) => setKeyword(e.target.value)}
+              placeholder="Enter keyword"
+            />
+          </VStack>
+          <VStack w="100%" spacing={1}>
+            <Text mb="0">Type a sentence:</Text>
+            <Textarea
+              value={inputValue}
+              onChange={handleInputChange}
+              placeholder="The weather outside is wonderful today."
+              rows={2}
+              maxLength={80}
+            />
+            <Text fontSize="sm">
+              Characters remaining: {remainingCharacters}
+            </Text>
+          </VStack>
+        </VStack>
+
+        <Text fontWeight="bold" whiteSpace="pre-wrap" wordBreak="break-word">
+          <Highlight query={keyword} styles={{ bg: "green.200" }}>
+            {inputValue || "The weather outside is wonderful today."}
+          </Highlight>
+        </Text>
+      </Box>
+    </SingleExample>
+  );
+}
 ```
