--- a/app/mardownExamples/typography/h05.md
+++ b/app/mardownExamples/typography/h05.md
@@ -1,3 +1,56 @@
 ```javascript
+const documentContent = `
+Once upon a time, in a small countryside village, there lived a cow named Felix. 
+Felix was a happy and curious cow, always eager to explore the meadows and interact 
+with other animals. Every day, Felix would wake up early in the morning and join 
+the other cows for grazing in the lush green fields. Felix loved the feeling of 
+the fresh grass beneath his hooves.
 
+One sunny day, Felix decided to venture beyond the meadows and explore the nearby 
+forest. As Felix wandered through the trees, he encountered various creatures, 
+including squirrels, rabbits, and birds. Felix made many new friends and enjoyed 
+the beauty of nature.
+
+When the day turned to evening, Felix returned to the village with a heart full of 
+excitement and stories to share. The other cows gathered around Felix, eager to
+ hear about his adventures. Felix enthusiastically recounted every detail, 
+ emphasizing how much he loved exploring the forest.
+
+From that day onward, Felix became known as the adventurous cow who always had a 
+fascinating story to tell. Whenever anyone mentioned the name Felix, it reminded 
+them of the cow with a brave spirit and a thirst for exploration.
+
+And so, the tale of Felix the adventurous cow spread throughout the village, 
+ensuring that Felix's name would forever be associated with curiosity, courage, 
+and remarkable journeys.
+`;
+
+export function HighlightFunctionSeven() {
+  const [searchQuery, setSearchQuery] = useState("Felix");
+
+  return (
+    <SingleExample bg="background">
+      <VStack w="100%" spacing={3}>
+        <Text mb="0">Search term:</Text>
+        <Input
+          value={searchQuery}
+          onChange={(e) => setSearchQuery(e.target.value)}
+          placeholder="Enter a search term"
+          mb="4"
+        />
+        <Box overflowY="auto">
+          {documentContent.split("\n").map((paragraph, index) => (
+            <Highlight
+              key={index}
+              query={searchQuery}
+              styles={{ bg: "cyan.200" }}
+            >
+              {paragraph}
+            </Highlight>
+          ))}
+        </Box>
+      </VStack>
+    </SingleExample>
+  );
+}
 ```
