--- a/app/mardownExamples/typography/h06.md
+++ b/app/mardownExamples/typography/h06.md
@@ -1,3 +1,58 @@
 ```javascript
+export function HighlightFunctionEight() {
+  const placeholder = "I am @EvanMarie and I am excited about #code";
+  const [message, setMessage] = useState(placeholder);
 
+  const handleInputChange = (e: React.ChangeEvent<HTMLTextAreaElement>) => {
+    setMessage(e.target.value);
+  };
+
+  const highlightMentionsAndHashtags = () => {
+    if (message) {
+      const regex = /[@#]\w+/g; // Match mentions and hashtags
+      const matches = message.match(regex);
+      if (matches) {
+        return message.split(regex).flatMap((part, index) => {
+          if (index === matches.length) {
+            return part;
+          }
+          const match = matches[index];
+          return [
+            part,
+            <Highlight key={index} query={match} styles={{ bg: "purple.200" }}>
+              {match}
+            </Highlight>,
+          ];
+        });
+      }
+    }
+    return message;
+  };
+
+  return (
+    <VStack direction="column" w="100%" align="center" spacing={4}>
+      <Text fontSize="xl" fontWeight="bold">
+        Tag Highlighter
+      </Text>
+      <VStack w="100%" spacing={0}>
+        <Text>Write a message:</Text>
+        <Textarea
+          value={message}
+          onChange={handleInputChange}
+          placeholder={placeholder}
+          rows={4}
+          resize="none"
+        />
+      </VStack>
+      <VStack w="100%" spacing={1}>
+        <Box>
+          <Text fontSize="md" fontWeight="bold">
+            Highlighted Result:
+          </Text>
+          <Box>{highlightMentionsAndHashtags()}</Box>
+        </Box>
+      </VStack>
+    </VStack>
+  );
+}
 ```
