in the middle of text, got hung up on animations

--- a/app/mardownExamples/typography/h07.md
+++ b/app/mardownExamples/typography/h07.md
@@ -1,3 +1,109 @@
 ```javascript
+export function TextFunctionFour() {
+  const [phrases, setPhrases] = useState([
+    "Input 3 lines of text and",
+    "you can make your own",
+    "animated text too!",
+  ]);
 
+  const [currentPhraseIndex, setCurrentPhraseIndex] = useState(0);
+  const [isAnimationRunning, setIsAnimationRunning] = useState(false);
+
+  useEffect(() => {
+    let interval: NodeJS.Timeout;
+
+    if (isAnimationRunning) {
+      interval = setInterval(() => {
+        setCurrentPhraseIndex((prevIndex) => (prevIndex + 1) % phrases.length);
+      }, 1500);
+    }
+
+    return () => {
+      clearInterval(interval);
+    };
+  }, [phrases, isAnimationRunning]);
+
+  const handleInputChange = (event: React.ChangeEvent<HTMLTextAreaElement>) => {
+    const inputLines = event.target.value.split("\n");
+    const newPhrases = inputLines.slice(0, 3);
+
+    setPhrases(newPhrases);
+    setCurrentPhraseIndex(0);
+  };
+
+  const handleToggleAnimation = () => {
+    setIsAnimationRunning((prevState) => !prevState);
+  };
+
+  const buttonColor = isAnimationRunning ? "accent_1" : "accent_2";
+  const icon = isAnimationRunning ? (
+    <FaPause size={24} />
+  ) : (
+    <FaPlay size={36} />
+  );
+
+  return (
+    <VStack w="100%" spacing={4}>
+      <Textarea
+        {...textAreaStyling}
+        resize="none"
+        rows={3}
+        onChange={handleInputChange}
+        placeholder="Enter three lines of text"
+      />
+      <Center
+        w="100%"
+        h="100px"
+        my={3}
+        color="accent_2"
+        fontWeight="bold"
+        p={4}
+        bg="sidebarBackground"
+        borderRadius="lg"
+        border="1px solid"
+        textAlign="center"
+        overflow="hidden"
+        position="relative"
+        display="flex"
+        alignItems="center"
+        justifyContent="center"
+      >
+        {phrases.map((phrase, index) => (
+          <Box
+            key={index}
+            position="absolute"
+            top={5}
+            left={0}
+            width="100%"
+            height="100%"
+            opacity={currentPhraseIndex === index ? 1 : 0}
+            transition="opacity 0.3s ease"
+          >
+            <Text fontSize="26px">{phrase}</Text>
+          </Box>
+        ))}
+      </Center>
+      <Center w="100%">
+        <HStack>
+          <Button
+            color="background"
+            bg={buttonColor}
+            w="50px"
+            h="50px"
+            borderRadius="full"
+            size="lg"
+            onClick={handleToggleAnimation}
+            shadow="xl"
+          >
+            {isAnimationRunning ? (
+              <Icon as={FaPause} boxSize={6} />
+            ) : (
+              <Icon as={FaPlay} boxSize={6} />
+            )}
+          </Button>
+        </HStack>
+      </Center>
+    </VStack>
+  );
+}
 ```
