finished text and therefore typography

--- a/app/mardownExamples/typography/h08.md
+++ b/app/mardownExamples/typography/h08.md
@@ -1,3 +1,11 @@
 ```javascript
-
+<Text
+  lineHeight="1.2"
+  fontSize="3xl"
+  fontWeight="extrabold"
+  bgGradient="linear(to-r, purple.600, blue.500, purple.700)"
+  bgClip="text"
+>
+  Discover the Magic
+</Text>
 ```
