--- a/app/mardownExamples/typography/h09.md
+++ b/app/mardownExamples/typography/h09.md
@@ -1,3 +1,151 @@
 ```javascript
+interface Choice {
+  label: string;
+  next: number;
+}
 
+interface StoryElement {
+  text: string;
+  choices: Choice[];
+}
+
+export function TextFunctionSix() {
+  const [storyIndex, setStoryIndex] = useState(0);
+  const story: StoryElement[] = [
+    {
+      // 0
+      text: "You find yourself in a dark forest. What do you do?",
+      choices: [
+        { label: "Go left", next: 1 },
+        { label: "Go right", next: 2 },
+      ],
+    },
+    {
+      // 1
+      text: "Going left, you encounter a mysterious cave. Enter or keep going?",
+      choices: [
+        { label: "Enter", next: 3 },
+        { label: "Keep going", next: 8 },
+      ],
+    },
+    {
+      // 2
+      text: "Going right, you stumble upon a hidden treasure chest! Open it or leave it?",
+      choices: [
+        { label: "Open it", next: 6 },
+        { label: "Leave it", next: 7 },
+      ],
+    },
+    {
+      // 3
+      text: "Inside the cave, you find a sleeping dragon. Try to sneak past or go back?",
+      choices: [
+        { label: "Sneak past", next: 5 },
+        { label: "Go back", next: 4 },
+      ],
+    },
+    {
+      // 4
+      text: "You decided to go back. As you exit the cave, you find yourself back in the forest.",
+      choices: [
+        { label: "Go straight", next: 12 },
+        { label: "Go right", next: 2 },
+      ],
+    },
+    {
+      // 5
+      text: "You successfully sneak past the dragon and find a treasure. You take it and become the hero of the realm. You live happily ever after.",
+      choices: [],
+    },
+    {
+      // 6
+      text: "You open the treasure chest and discover a rare artifact! You take it and become the hero of the realm. You live happily ever after.",
+      choices: [],
+    },
+    {
+      // 7
+      text: "You decide to leave the treasure chest behind and continue exploring. You find a peaceful village and decide to settle there. You live happily ever after.",
+      choices: [],
+    },
+    {
+      // 8
+      text: "You continue your journey and come across a river. Swim or find a bridge?",
+      choices: [
+        { label: "Swim", next: 9 },
+        { label: "Find a bridge", next: 10 },
+      ],
+    },
+    {
+      // 9
+      text: "You swam across the river and survived the currents. On the other side, you find a beautiful meadow. You decide to settle there and live a peaceful life. You live happily ever after.",
+      choices: [],
+    },
+    {
+      // 10
+      text: "You find a sturdy bridge and cross the river without any trouble. On the other side, you find a bustling city where you start a new life. You live happily ever after.",
+      choices: [],
+    },
+    {
+      // 11
+      text: "",
+      choices: [],
+    },
+    {
+      // 12
+      text: "You continue straight ahead and find a peaceful village. You decide to settle there and live a peaceful life. You live happily ever after.",
+      choices: [],
+    },
+  ];
+
+  const handleChoiceClick = (nextIndex: number) => {
+    if (nextIndex >= 0 && nextIndex < story.length) {
+      setStoryIndex(nextIndex);
+    }
+  };
+
+  const handleRestart = () => {
+    setStoryIndex(0);
+  };
+
+  const currentStoryElement = story[storyIndex];
+
+  return (
+    <SingleExample>
+      <Center
+        w="100%"
+        bg="mainText"
+        color="background"
+        h="fit-content"
+        borderRadius="lg"
+        fontWeight="bold"
+        fontFamily="Fantasy"
+        px={2}
+        py={4}
+      >
+        <Text fontSize="xl">{currentStoryElement?.text}</Text>
+      </Center>
+      <VStack w="100%">
+        {" "}
+        <VStack w="100%" spacing={4} h="80px">
+          {currentStoryElement?.choices.map((choice, index) => (
+            <Button
+              key={index}
+              w="125px"
+              size="sm"
+              onClick={() => handleChoiceClick(choice.next)}
+            >
+              {choice.label}
+            </Button>
+          ))}
+          {(storyIndex === story.length - 1 ||
+            currentStoryElement?.choices.length === 0) && (
+            <Button mt={4} size="sm" w="125px" onClick={handleRestart}>
+              Restart
+            </Button>
+          )}
+        </VStack>
+      </VStack>
+    </SingleExample>
+  );
+}
 ```
