--- a/app/mardownExamples/typography/h09.md
+++ b/app/mardownExamples/typography/h09.md
@@ -11,6 +11,9 @@ interface StoryElement {
 
 export function TextFunctionSix() {
   const [storyIndex, setStoryIndex] = useState(0);
+  const [displayedText, setDisplayedText] = useState("");
+  const [charIndex, setCharIndex] = useState(0);
+
   const story: StoryElement[] = [
     {
       // 0
@@ -97,6 +100,24 @@ export function TextFunctionSix() {
     },
   ];
 
+  useEffect(() => {
+    setDisplayedText("");
+    setCharIndex(0);
+  }, [storyIndex]);
+
+  useEffect(() => {
+    const timer = setTimeout(() => {
+      if (charIndex < story[storyIndex].text.length) {
+        setDisplayedText(
+          (prevText) => prevText + story[storyIndex].text[charIndex]
+        );
+        setCharIndex((prevIndex) => prevIndex + 1);
+      }
+    }, 50);
+
+    return () => clearTimeout(timer);
+  }, [displayedText, charIndex]);
+
   const handleChoiceClick = (nextIndex: number) => {
     if (nextIndex >= 0 && nextIndex < story.length) {
       setStoryIndex(nextIndex);
@@ -115,14 +136,14 @@ export function TextFunctionSix() {
         w="100%"
         bg="mainText"
         color="background"
-        h="fit-content"
+        h="175px"
+        overflowY="auto"
         borderRadius="lg"
         fontWeight="bold"
         fontFamily="Fantasy"
-        px={2}
-        py={4}
+        p={4}
       >
-        <Text fontSize="xl">{currentStoryElement?.text}</Text>
+        <Text fontSize="xl">{displayedText}</Text>
       </Center>
       <VStack w="100%">
         {" "}
