--- a/app/mardownExamples/etc/07.md
+++ b/app/mardownExamples/etc/07.md
@@ -1,3 +1,23 @@
 ```javascript
+export function PortalFunctionTwo() {
+  const ref = useRef<HTMLDivElement | null>(null);
 
+  return (
+    <Box bg="accent_1" color="background" p={3} borderRadius="md">
+      Parent of the Portal.
+      <Portal containerRef={ref}>
+        This text is portaled to the blue box from the Parent by the clever use
+        of <Code>{`<Portal>`}</Code>!
+      </Portal>
+      <Box
+        p={3}
+        borderRadius="md"
+        ref={ref as React.RefObject<HTMLDivElement>}
+        bg="accent_2"
+      >
+        <div>Container to which the Portal is portaled!</div>
+      </Box>
+    </Box>
+  );
+}
 ```
