--- a/app/mardownExamples/etc/08.md
+++ b/app/mardownExamples/etc/08.md
@@ -1,3 +1,26 @@
 ```javascript
+export function PortalFunctionThree() {
+  const ref = (useRef < HTMLDivElement) | (null > null);
 
+  return (
+    <SingleExample bg="background">
+      {" "}
+      <div>
+        <Portal containerRef={ref}>
+          <Box bg="accent_1" color="background" p={3} borderRadius="md">
+            The first portal, Parent.
+            <Portal>Nested child portal</Portal>
+          </Box>
+        </Portal>
+        <Box
+          bg="accent_2"
+          color="background"
+          p={3}
+          borderRadius="md"
+          ref={ref}
+        />
+      </div>
+    </SingleExample>
+  );
+}
 ```
