--- a/app/mardownExamples/etc/09.md
+++ b/app/mardownExamples/etc/09.md
@@ -1,3 +1,21 @@
 ```javascript
-
+export function PortalFunctionFour() {
+  const ref = (useRef < HTMLDivElement) | (null > null);
+  return (
+    <SingleExample bg="background">
+      <div>
+        <Portal containerRef={ref}>
+          <Box bg="accent_2" color="background" p={3} borderRadius="md">
+            Parent Portal with child Portal set to render to{" "}
+            <Code>document.body</Code>
+            <Portal appendToParentPortal={false}>
+              Child, which will render to document.body
+            </Portal>
+          </Box>
+        </Portal>
+        <div style={{ background: "accent_1" }} ref={ref} />
+      </div>
+    </SingleExample>
+  );
+}
 ```
