in the middle of transitions

--- a/app/mardownExamples/etc/11.md
+++ b/app/mardownExamples/etc/11.md
@@ -1,3 +1,9 @@
 ```javascript
+  <Show above="sm">
+    <Box>Box One</Box>
+  </Show>
 
+  <Hide below="md">
+    <Box>Box Two</Box>
+  </Hide>
 ```
