--- a/app/mardownExamples/etc/10.md
+++ b/app/mardownExamples/etc/10.md
@@ -1,3 +1,9 @@
 ```javascript
+<Show breakpoint="(max-width: 400px)">
+  <Box>Box One</Box>
+</Show>
 
+<Hide breakpoint="(max-width: 400px)">
+  <Box>Box Two</Box>
+</Hide>
 ```
