finished transitions. now just need to go back and edit and clean up.

--- a/app/mardownExamples/etc/h04.md
+++ b/app/mardownExamples/etc/h04.md
@@ -1,3 +1,67 @@
 ```javascript
+export function TransitionsFunctionSix() {
+  const [isBouncing, setIsBouncing] = useState(false);
 
+  const handleBounce = () => {
+    setIsBouncing(true);
+    setTimeout(() => {
+      setIsBouncing(false);
+    }, 250);
+  };
+
+  const smileyVariants = {
+    initial: {
+      scale: 0.1,
+    },
+    bouncing: {
+      scale: 1,
+    },
+  };
+
+  const secondVariants = {
+    initial: {
+      scale: 0.1,
+      rotate: 0,
+    },
+    bouncing: {
+      scale: 1,
+      rotate: 180,
+    },
+  };
+
+  return (
+    <SingleExample bg="background">
+      <div>
+        <ScaleFade in={!isBouncing} initialScale={0.1}>
+          <motion.div
+            className="ball"
+            variants={isBouncing ? secondVariants : smileyVariants}
+            initial="initial"
+            animate="bouncing"
+            transition={{
+              type: "spring",
+              damping: 10,
+              stiffness: 200,
+            }}
+          >
+            <Button
+              w="100px"
+              h="100px"
+              bg="accent_2"
+              borderRadius="50%"
+              border="2px solid white"
+              onClick={handleBounce}
+            >
+              {isBouncing ? (
+                <BsEmojiSmile size={50} />
+              ) : (
+                <BsEmojiSmile size={50} />
+              )}
+            </Button>
+          </motion.div>
+        </ScaleFade>
+      </div>
+    </SingleExample>
+  );
+}
 ```
