--- a/app/mardownExamples/etc/h05.md
+++ b/app/mardownExamples/etc/h05.md
@@ -1,3 +1,38 @@
 ```javascript
+const images = [
+  "https://picsum.photos/id/123/200/300",
+  "https://picsum.photos/id/222/200/300",
+  "https://picsum.photos/id/444/200/300",
+  "https://picsum.photos/id/555/200/300",
+  "https://picsum.photos/id/111/200/300",
+  "https://picsum.photos/id/23/200/300",
+  "https://picsum.photos/id/33/200/300",
+  "https://picsum.photos/id/53/200/300",
+];
 
+export function TransitionsFunctionSeven() {
+  const [currentImage, setCurrentImage] = useState(0);
+
+  const handleNextImage = () => {
+    setCurrentImage((prevImage) => (prevImage + 1) % images.length);
+  };
+
+  return (
+    <VStack w="100%" align="center">
+      <Fade key={currentImage} in={true} style={{ transitionDuration: "1s" }}>
+        <Box
+          w={{ base: "200px", lg: "175px" }}
+          h={{ base: "300px", lg: "262.5px" }}
+          bg={`url(${images[currentImage]})`}
+          backgroundSize="cover"
+          backgroundPosition="center"
+          borderRadius="md"
+        />
+      </Fade>
+      <Button size="sm" onClick={handleNextImage}>
+        Next Image
+      </Button>
+    </VStack>
+  );
+}
 ```
