--- a/app/mardownExamples/etc/h06.md
+++ b/app/mardownExamples/etc/h06.md
@@ -1,3 +1,40 @@
 ```javascript
+export function TransitionsFunctionEight() {
+  const [isCardVisible, setIsCardVisible] = useState(false);
 
+  const handleToggleCard = () => {
+    setIsCardVisible(!isCardVisible);
+  };
+
+  return (
+    <VStack spacing={4}>
+      <Button size="sm" onClick={handleToggleCard}>
+        {isCardVisible ? "Close" : "Open"}
+      </Button>
+      <SlideFade in={isCardVisible}>
+        <Box
+          w={{ base: "100%", sm: "350px", lg: "100%" }}
+          p={2}
+          bg="accent_2"
+          color="background"
+          border="2px solid white"
+          borderRadius="lg"
+          boxShadow="xl"
+          textAlign="center"
+        >
+          <Box fontSize="2xl" fontWeight="bold" mb={4}>
+            A Creative Journey
+          </Box>
+          <Box>
+            Imagine embarking on a journey through a vast spectrum of colors,
+            discovering unique palettes that convey moods, themes, and
+            narratives. From serene pastels that evoke tranquility to bold and
+            energetic combinations that ignite passion, each palette tells a
+            story of its own.
+          </Box>
+        </Box>
+      </SlideFade>
+    </VStack>
+  );
+}
 ```
