fixed a few things on transitions

--- a/app/mardownExamples/etc/12.md
+++ b/app/mardownExamples/etc/12.md
@@ -1,3 +1,33 @@
 ```javascript
+const customTransition = {
+  enter: {
+    opacity: 1,
+    transition: { duration: 0.95, ease: "easeInOut" },
+  },
+  exit: {
+    opacity: 0,
+    transition: { duration: 0.95, ease: "easeInOut" },
+  },
+};
 
+function FadeTwo() {
+  const { isOpen, onToggle } = useDisclosure();
+
+  return (
+    <VStack w="100%" spacing={0}>
+      <ButtonBox>
+        <Button {...transitionButtonStyles} onClick={onToggle}>
+          Custom Fade
+        </Button>
+      </ButtonBox>
+      <Center h="70px" w="100%">
+        <Fade in={isOpen} transition={customTransition}>
+          <Center {...transitionBoxStyle}>
+            <Code>{`duration: 0.95`}</Code>
+          </Center>
+        </Fade>
+      </Center>
+    </VStack>
+  );
+}
 ```
